examples/test/testpolicy6128.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6128
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key29: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value35
          key35: value42
          key10: value8
      podSelector:
        matchLabels:
          key39: value8
          key15: value17
